--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "redis>=6.4.0",
+    "scikit-learn>=1.7.1",
     "tavily-python>=0.7.10",
     "uvicorn[standard]>=0.35.0",
 ]
